--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -25,16 +25,11 @@ jobs:
           scope: '@${{ github.repository_owner }}'
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
-
-      - name: Build project
-        run: npm run build --if-present
+        run: npm install
 
       - name: Publish to GitHub Packages
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: npm publish
+        run: |
+         npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.CLASSIC_TOKEN }}
