--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "@samuelpapyan/my-lib",
   "version": "1.0.8",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
+    "clean": "del-cli ./dist/*",
+    "build": "npm run clean && npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +26,9 @@
   "bugs": {
     "url": "https://github.com/samuelpapyan/my-lib/issues"
   },
-  "homepage": "https://github.com/samuelpapyan/my-lib#readme"
+  "homepage": "https://github.com/samuelpapyan/my-lib#readme",
+  "dependencies": {
+    "del-cli": "^7.0.0",
+    "typescript": "^5.9.3"
+  }
 }
