--- a/package.json
+++ b/package.json
@@ -27,8 +27,16 @@
     "url": "https://github.com/samuelpapyan/my-lib/issues"
   },
   "homepage": "https://github.com/samuelpapyan/my-lib#readme",
-  "dependencies": {
+  "peerDependencies": {
     "del-cli": "^7.0.0",
+    "express": "^5.2.1",
+    "multer": "^2.0.2",
+    "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "del-cli": "^7.0.0",
+    "express": "^5.2.1",
+    "multer": "^2.0.2",
     "typescript": "^5.9.3"
   }
 }
