--- a/.github/workflows/npm-publish-beta-version.yml
+++ b/.github/workflows/npm-publish-beta-version.yml
@@ -1,3 +1,5 @@
+name: CI and Publish Beta Version to GitHub Packages
+
 on:
   push:
     branches: [ dev ]
@@ -21,7 +23,7 @@ jobs:
         run: npm run build
 
       - name: Publish Beta Version to GitHub Packages
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
         run: |
           npm version prerelease --preid=beta --no-git-tag-version
           npm publish --tag dev
