--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@samuelpapyan/my-lib",
-  "version": "1.0.9",
+  "version": "1.0.10-beta.0",
   "description": "",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
